<resources>
    <string name="app_name">GymClimbTracker</string>
    <string-array name="route_type_array">
        <item>Route/Problem Type</item>
        <item>Boulder</item>
        <item>Top Rope</item>
        <item>Lead</item>
    </string-array>
    <string-array name="route_grade_array">
        <item>Route/Problem Grade</item>
        <item>5.?</item>
        <item>5.5</item>
        <item>5.6</item>
        <item>5.7</item>
        <item>5.8</item>
        <item>5.9</item>
        <item>5.10a</item>
        <item>5.10b</item>
        <item>5.10c</item>
        <item>5.10d</item>
        <item>5.11a</item>
        <item>5.11b</item>
        <item>5.11c</item>
        <item>5.11d</item>
        <item>5.12a</item>
        <item>5.12b</item>
        <item>5.12c</item>
        <item>5.12d</item>
        <item>5.13a</item>
        <item>5.13b</item>
        <item>5.13c</item>
        <item>5.13d</item>
        <item>5.14</item>
        <item>v?</item>
        <item>v0</item>
        <item>v1</item>
        <item>v2</item>
        <item>v3</item>
        <item>v4</item>
        <item>v5</item>
        <item>v6</item>
        <item>v7</item>
        <item>v8</item>
        <item>v9</item>
        <item>v10</item>
    </string-array>
    <string-array name="rope_grade_array">
        <item>5.5</item>
        <item>5.6</item>
        <item>5.7</item>
        <item>5.8</item>
        <item>5.9</item>
        <item>5.10a</item>
        <item>5.10b</item>
        <item>5.10c</item>
        <item>5.10d</item>
        <item>5.11a</item>
        <item>5.11b</item>
        <item>5.11c</item>
        <item>5.11d</item>
        <item>5.12a</item>
        <item>5.12b</item>
        <item>5.12c</item>
        <item>5.12d</item>
        <item>5.13a</item>
        <item>5.13b</item>
        <item>5.13c</item>
        <item>5.13d</item>
        <item>5.14</item>
    </string-array>
    <string-array name="boulder_grade_array">
        <item>v0</item>
        <item>v1</item>
        <item>v2</item>
        <item>v3</item>
        <item>v4</item>
        <item>v5</item>
        <item>v6</item>
        <item>v7</item>
        <item>v8</item>
        <item>v9</item>
        <item>v10</item>
    </string-array>
    <string-array name="route_color_array">
        <item>Route/Problem Color</item>
        <item>Black</item>
        <item>White</item>
        <item>Tan</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="route_wall_array">
        <item>Gym Wall Name</item>
        <item>Welcome Wall</item>
        <item>Left Cheek</item>
        <item>Right Cheek</item>
        <item>Bouldering Slabs</item>
        <item>10 Degree Wall</item>
        <item>Prow</item>
        <item>Learning Center</item>
        <item>Alcove</item>
        <item>Storage Slabs</item>
        <item>Tower</item>
        <item>Gallery</item>
        <item>Trophy Wall</item>
        <item>Holiday Wall</item>
        <item>Constant Wall</item>
        <item>Crystal</item>
        <item>Marathon Wall</item>
        <item>Double Wave</item>
        <item>Sun Wall</item>
        <item>Mega Slab</item>
        <item>Crows Nest</item>
        <item>Crack Wall</item>
        <item>Ice Box</item>
        <item>Belly</item>
        <item>Wave</item>
        <item>Corner-Copia</item>
    </string-array>
    <string-array name="englewood_route_wall_array">
        <item>Gym Wall Name</item>
        <item>45</item>
        <item>Arch</item>
        <item>Arete</item>
        <item>Column</item>
        <item>Crystal</item>
        <item>Cube</item>
        <item>Egg</item>
        <item>Freestanding Snail</item>
        <item>Freestanding Topout</item>
        <item>Heart</item>
        <item>Hex</item>
        <item>Instruction Wall</item>
        <item>Island</item>
        <item>Main Squeeze</item>
        <item>Mega Roll</item>
        <item>Party</item>
        <item>Prow</item>
        <item>Pump</item>
        <item>Slab</item>
        <item>Star</item>
        <item>Steep</item>
    </string-array>
    <string-array name="golden_route_wall_array">
        <item>Gym Wall Name</item>
        <item>Arch</item>
        <item>Barrel</item>
        <item>Birthday Room #1</item>
        <item>Birthday Room #2</item>
        <item>Cat Walk</item>
        <item>Coffin Wall</item>
        <item>Hurricane Wall</item>
        <item>Instruction Wall #1</item>
        <item>Instruction Wall #2</item>
        <item>Sickle</item>
        <item>Topout Boulder</item>
        <item>Wave Wall</item>
        <item>World Cup Wall</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_route">AddRouteActivity</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="add_route">Add Route</string>
    <string name="add_to_history">Add To History</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">closed drawer</string>
    <string name="action_drawer_logo">action drawer logo</string>
    <string name="route_name">Route Name:</string>
    <string name="route_type">Route Type:</string>
    <string name="route_grade">Route Grade:</string>
    <string name="route_color">Route Color:</string>
    <string name="route_wall">Route Wall:</string>
    <string name="route_setter">Route Setter:</string>
    <string name="route_set_date">Route Set Date:</string>
    <string name="num_attempts_label">Number of Attempts:</string>
    <string name="route_notes_label">Route Notes:</string>
    <string name="sent_spinner_label">Sent:</string>
    <string-array name="sent_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string name="date_format_string">MM/d/yyyy</string>
    <string name="no_notes_string">No Notes</string>
    <string name="edit_number_of_attempts_string">Edit Number Of Attempts</string>
    <string name="how_many_attempts_string">How many attempts did this climb require?</string>
    <string name="save_button_string">Save</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="edit_route_notes_string">Edit Your Route Notes</string>
    <string name="what_are_your_notes_string">What would you like to say about this route?</string>
    <string name="menu_string">Menu</string>
    <string name="climb_name_string">Climb name</string>
    <string name="route_name_string">Route name</string>
    <string name="gym_name_string">Climb name</string>
    <string name="route_list_item">Route List</string>
    <string name="view_history_item">View History</string>
    <string name="add_route_item">Add Route</string>
    <string name="logout_item">Log Out</string>
    <string name="pick_date">Date Route Was Set</string>
    <string-array name="route_wall_filter_array">
        <item>All Walls</item>
        <item>Welcome Wall</item>
        <item>Left Cheek</item>
        <item>Right Cheek</item>
        <item>Bouldering Slabs</item>
        <item>10 Degree Wall</item>
        <item>Prow</item>
        <item>Learning Center</item>
        <item>Alcove</item>
        <item>Storage Slabs</item>
        <item>Tower</item>
        <item>Gallery</item>
        <item>Trophy Wall</item>
        <item>Holiday Wall</item>
        <item>Constant Wall</item>
        <item>Crystal</item>
        <item>Marathon Wall</item>
        <item>Double Wave</item>
        <item>Sun Wall</item>
        <item>Mega Slab</item>
        <item>Crows Nest</item>
        <item>Crack Wall</item>
        <item>Ice Box</item>
        <item>Belly</item>
        <item>Wave</item>
        <item>Corner-Copia</item>
    </string-array>
    <string-array name="englewood_route_wall_filter_array">
        <item>All Walls</item>
        <item>45</item>
        <item>Arch</item>
        <item>Arete</item>
        <item>Column</item>
        <item>Crystal</item>
        <item>Cube</item>
        <item>Egg</item>
        <item>Freestanding Snail</item>
        <item>Freestanding Topout</item>
        <item>Heart</item>
        <item>Hex</item>
        <item>Instruction Wall</item>
        <item>Island</item>
        <item>Main Squeeze</item>
        <item>Mega Roll</item>
        <item>Party</item>
        <item>Prow</item>
        <item>Pump</item>
        <item>Slab</item>
        <item>Star</item>
        <item>Steep</item>
    </string-array>
    <string-array name="golden_route_wall_filter_array">
        <item>All Walls</item>
        <item>Arch</item>
        <item>Barrel</item>
        <item>Birthday Room #1</item>
        <item>Birthday Room #2</item>
        <item>Cat Walk</item>
        <item>Coffin Wall</item>
        <item>Hurricane Wall</item>
        <item>Instruction Wall #1</item>
        <item>Instruction Wall #2</item>
        <item>Sickle</item>
        <item>Topout Boulder</item>
        <item>Wave Wall</item>
        <item>World Cup Wall</item>
    </string-array>
    <string-array name="all_wall_filter_array">
        <item>All Walls</item>
        <item>Welcome Wall</item>
        <item>Left Cheek</item>
        <item>Right Cheek</item>
        <item>Bouldering Slabs</item>
        <item>10 Degree Wall</item>
        <item>Prow</item>
        <item>Learning Center</item>
        <item>Alcove</item>
        <item>Storage Slabs</item>
        <item>Tower</item>
        <item>Gallery</item>
        <item>Trophy Wall</item>
        <item>Holiday Wall</item>
        <item>Constant Wall</item>
        <item>Crystal</item>
        <item>Marathon Wall</item>
        <item>Double Wave</item>
        <item>Sun Wall</item>
        <item>Mega Slab</item>
        <item>Crows Nest</item>
        <item>Crack Wall</item>
        <item>Ice Box</item>
        <item>Belly</item>
        <item>Wave</item>
        <item>Corner-Copia</item>
        <item>All Walls</item>
        <item>45</item>
        <item>Arch</item>
        <item>Arete</item>
        <item>Column</item>
        <item>Crystal</item>
        <item>Cube</item>
        <item>Egg</item>
        <item>Freestanding Snail</item>
        <item>Freestanding Topout</item>
        <item>Heart</item>
        <item>Hex</item>
        <item>Instruction Wall</item>
        <item>Island</item>
        <item>Main Squeeze</item>
        <item>Mega Roll</item>
        <item>Party</item>
        <item>Prow</item>
        <item>Pump</item>
        <item>Slab</item>
        <item>Star</item>
        <item>Steep</item>
        <item>All Walls</item>
        <item>Arch</item>
        <item>Barrel</item>
        <item>Birthday Room #1</item>
        <item>Birthday Room #2</item>
        <item>Cat Walk</item>
        <item>Coffin Wall</item>
        <item>Hurricane Wall</item>
        <item>Instruction Wall #1</item>
        <item>Instruction Wall #2</item>
        <item>Sickle</item>
        <item>Topout Boulder</item>
        <item>Wave Wall</item>
        <item>World Cup Wall</item>
    </string-array>
    <string-array name="state_filter_array">
        <item>All States</item>
        <item>California</item>
        <item>Colorado</item>
    </string-array>
</resources>