<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_name" />
        <TextView
            android:id="@+id/climb_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_type" />
        <TextView
            android:id="@+id/climb_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_grade_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_grade" />
        <TextView
            android:id="@+id/climb_grade_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_color" />
        <TextView
            android:id="@+id/climb_color_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_wall_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_wall" />
        <TextView
            android:id="@+id/climb_wall_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_setter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_setter" />
        <TextView
            android:id="@+id/climb_setter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/climb_set_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:text="@string/route_set_date" />
        <TextView
            android:id="@+id/climb_set_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>
    <include android:id="@+id/user_route_info"
            layout="@layout/fragment_user_route_info"/>

</LinearLayout>